--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="content-all">
       <div class="video">
         <video autoplay loop id="video-background">
-          <source src="https://vimeo.com/218708665" type="video/mp4">
+          <source src="https://drive.google.com/file/d/0B9RvekUW6TOka3NrUEg0Qk1oekE/view?usp=sharing" type="video/mp4">
+          <iframe src="https://player.vimeo.com/video/218708665" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </video>
         <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
         <script type="text/javascript" src="function.js"></script>
@@ -23,8 +24,8 @@
               <div class="parent">
                 <div class="flex-dis">
                   <h2 id="int-cent">Webinar with Power Solutions Architect </h2>
-                  <h2 id="int-cent"><img src="https://photos-3.dropbox.com/t/2/AAC_xm9ogh4ZY0kyf5zGWEVvbPEvpuN8RbPS5B3jahAmbg/12/579072691/png/32x32/1/_/1/2/bcalendar.png/EPzogdQEGMSpAyACKAI/YPdS7Q8JOG5NPjYHzUIX0mWQGUh2XqCrccaiCnNs45o?size=1600x1200&size_mode=3" alt="bcalender"/>Wednesday, June 7, 2017</h2>
-                  <h2  class="" id="int-cent"><img src="https://photos-1.dropbox.com/t/2/AACuX4pn4nE_MBUGQ9d_TTvcPVXkd35FJqQ2wwwqa22cYQ/12/579072691/png/32x32/1/_/1/2/bclock.png/EPzogdQEGMSpAyACKAI/f3FGtBc2FGVCzb-rNzPOu8norsRxWlXT389bpPVoy2s?size=1600x1200&size_mode=3" alt="bclock"/>1pm ET | 11am MT | 10am PT</h2>
+                  <h2 id="int-cent"><img width="33" height="35" src="https://photos-3.dropbox.com/t/2/AAC_xm9ogh4ZY0kyf5zGWEVvbPEvpuN8RbPS5B3jahAmbg/12/579072691/png/32x32/1/_/1/2/bcalendar.png/EPzogdQEGMSpAyACKAI/YPdS7Q8JOG5NPjYHzUIX0mWQGUh2XqCrccaiCnNs45o?size=1600x1200&size_mode=3" alt="bcalender"/>     Wednesday, June 7, 2017</h2>
+                  <h2  class="" id="int-cent"><img width="35" height="35" src="https://photos-1.dropbox.com/t/2/AACuX4pn4nE_MBUGQ9d_TTvcPVXkd35FJqQ2wwwqa22cYQ/12/579072691/png/32x32/1/_/1/2/bclock.png/EPzogdQEGMSpAyACKAI/f3FGtBc2FGVCzb-rNzPOu8norsRxWlXT389bpPVoy2s?size=1600x1200&size_mode=3" alt="bclock"/>    1pm ET | 11am MT | 10am PT</h2>
                   <h3  class="title-pe" id="int-cent">Win more jobs by providing solar powered wireless surveillance systems!</h3>
                   <p id="int-cent">Josh has designed solar solutions for systems integrators around the world.  These solutions are built for plug & play installation. </p>
                   <p id="int-cent">Join Mr. Brunson as he demonstrates how to utilize these plug & play power solutions for any outdoor scenario. </p>
