--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title></title>
     <link rel="stylesheet" href="style.css">
     <script src="function.js"></script>
+    <script src="https://use.typekit.net/zda0tyb.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
   <body>
     
