--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title></title>
     <link rel="stylesheet" href="style.css">
     <script src="function.js"></script>
-    <script src="https://use.typekit.net/zda0tyb.js"></script>
-    <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
   <body>
     
     <div class="content-all">
       <div class="video">
+        <!--<video autoplay loop id="video-background">
+          <iframe src="https://drive.google.com/file/d/0B9RvekUW6TOka3NrUEg0Qk1oekE/preview" width="640" height="480"></iframe>
+        </video>-->
         <div id="vid-back">
           <div  id="responsive-vid">
             <iframe min-width="100%" min-height="100%" src="https://www.youtube-nocookie.com/embed/TI-5hcSEfeI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
@@ -81,95 +82,6 @@
                 </div>
               </div>
             </div>   
-          </div>
-          
-          <div class="color-form"
-              <!-- Change or deletion of the name attributes in the input tag will lead to empty values on record submission-->
-            <div class="zf-templateWidth">
-              <form action='https://forms.zohopublic.com/default579/form/WebinarSignUp/formperma/9b5E2mk6MekF1DD15_1145a4M/htmlRecords/submit' name='form' method='POST' onSubmit='javascript:document.charset="UTF-8"; return zf_ValidateAndSubmit();' accept-charset='UTF-8'
-                enctype='multipart/form-data'><input type="hidden" name="zf_referrer_name" value="">
-                <!-- To Track referrals , place the referrer name within the " " in the above hidden input field -->
-                <input type="hidden" name="zf_redirect_url" value="">
-                <!-- To redirect to a specific page after record submission , place the respective url within the " " in the above hidden input field -->
-                <div class="zf-templateWrapper">
-                  <!---------template Header Starts Here---------->
-                  <ul class="zf-tempHeadBdr" id="no-bullets">
-                    <li class="zf-tempHeadContBdr">
-                      <div class="zf-clearBoth"></div>
-                    </li>
-                  </ul>
-                  <!---------template Header Ends Here---------->
-                  <!---------template Container Starts Here---------->
-                  <div class="zf-subContWrap zf-topAlign">
-                    <ul id="no-bullets">
-                      <!---------Single Line Starts Here---------->
-                      <li class="zf-tempFrmWrapper zf-large"><label class="zf-labelName">Company Name
-          <em class="zf-important">*</em>
-          </label>
-                        <div class="zf-tempContDiv"><span> <input type="text" name="SingleLine" checktype="c1" value="" maxlength="255"/></span>
-                          <p id="SingleLine_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
-                        </div>
-                        <div class="zf-clearBoth"></div>
-                      </li>
-                      <!---------Single Line Ends Here---------->
-                      <!---------Name Starts Here---------->
-                      <li class="zf-tempFrmWrapper zf-name zf-namelarge"><label class="zf-labelName">Name
-          <em class="zf-important">*</em>
-          </label>
-                        <div class="zf-tempContDiv">
-                          <div>
-                            <span> <input type="text" maxlength="255" name="Name_First" checktype="c1"/><label>First</label> </span>
-                            <span class="zf-last"> <input type="text" maxlength="255" name="Name_Last" checktype="c1"/><label>Last</label> </span>
-                            <div class="zf-clearBoth"></div>
-                          </div>
-                          <p id="Name_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
-                        </div>
-                        <div class="zf-clearBoth"></div>
-                      </li>
-                      <!---------Name Ends Here---------->
-                      <!---------Email Starts Here---------->
-                      <li class="zf-tempFrmWrapper zf-large"><label class="zf-labelName">Email
-          <em class="zf-important">*</em>
-          </label>
-                        <div class="zf-tempContDiv"><span> <input type="text" maxlength="255" name="Email" checktype="c5" value=""/></span>
-                          <p id="Email_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
-                        </div>
-                        <div class="zf-clearBoth"></div>
-                      </li>
-                      <!---------Email Ends Here---------->
-                      <!---------Multiple Line Starts Here---------->
-                      <li class="zf-tempFrmWrapper zf-large"><label class="zf-labelName">Your question for Josh
-          </label>
-                        <div class="zf-tempContDiv"><span> <textarea name="MultiLine" checktype="c1" maxlength="65535"></textarea> </span>
-                          <p id="MultiLine_error" class="zf-errorMessage" style="display:none;">Invalid value</p>
-                        </div>
-                        <div class="zf-clearBoth"></div>
-                      </li>
-                      <!---------Multiple Line Ends Here---------->
-                    </ul>
-                  </div>
-                  <!---------template Container Starts Here---------->
-                  <ul id="no-bullets">
-                    <li class="zf-fmFooter"><button class="zf-submitColor">Submit</button></li>
-                  </ul>
-                </div>
-                <!-- 'zf-templateWrapper' ends -->
-              </form>
-            </div>
-            <!-- 'zf-templateWidth' ends -->
-            <script type="text/javascript">
-              var zf_DateRegex = new RegExp(
-                "^([0][1-9]|1[012])[\/](([0][1-9])|([1-2][0-9])|([3][0-1]))[\/](?:(?:19|20)[0-9]{2})$"
-              );
-              var zf_MandArray = ["SingleLine", "Name_First", "Name_Last", "Email"];
-              var zf_FieldArray = [
-                "SingleLine",
-                "Name_First",
-                "Name_Last",
-                "Email",
-                "MultiLine"
-              ];
-            </script>
           </div>
         </div>
   </body>
