--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         </video>-->
         <div id="vid-back">
           <div  id="responsive-vid">
-            <iframe min-width="100%" min-height="100%" src="https://www.youtube-nocookie.com/embed/TI-5hcSEfeI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe  src="https://www.youtube-nocookie.com/embed/TI-5hcSEfeI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            <iframe min-width="100%" min-height="100%" src="https://www.youtube-nocookie.com/embed/rpHlXkur-8w?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen autoplay loop></iframe>
           </div>
         </div>
         <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
