--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </video>-->
         <div id="vid-back">
           <div  id="responsive-vid">
-            <iframe min-width="1280px" min-height="720px" src="https://www.youtube-nocookie.com/embed/rpHlXkur-8w?rel=0&amp;showinfo=0&amp;autoplay=1;&loop=1" frameborder="0" allowfullscreen autoplay="0" loop></iframe>
+            <iframe min-width="100%" min-height="100%" src="https://www.youtube-nocookie.com/embed/rpHlXkur-8w?rel=0&amp;showinfo=0&amp;autoplay=1;&loop=1vq=hd1080" frameborder="0" allowfullscreen autoplay="0" loop></iframe>
           </div>
         </div>
         <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
