--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </video>-->
         <div id="vid-back">
           <div  id="responsive-vid">
-            <iframe min-width="100%" min-height="100%" src="https://www.youtube-nocookie.com/embed/rpHlXkur-8w?vq=hd1080rel=0&amp;showinfo=0&amp;autoplay=1&amp;loop=1&amp;vq=hd1080" frameborder="0" allowfullscreen autoplay="0" loop></iframe>
+            <iframe width="1280" height="720" src="https://www.youtube-nocookie.com/embed/rpHlXkur-8w?vq=hd1080rel=0&amp;showinfo=0&amp;autoplay=1&amp;loop=1&amp;vq=hd1080" frameborder="0" allowfullscreen autoplay="0" loop></iframe>
           </div>
         </div>
         <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
