--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <figcaption>
                       <h3 class="title-pe">Business and Product Development at Vorp Energy</h3>
                         <p>Josh works with manufacturers of surveillance & wireless equipment to provide power solutions for systems integrators.</p>
-                    </figcaption><a href="https://www.linkedin.com/in/joshua-brunson-72b24188/" target="_blank"></a>
+                    </figcaption><a href="#"></a>
                   </figure>
                 </div>
 
@@ -76,7 +76,7 @@
                     <figcaption>
                       <h3 class="title-pe">Marketing Guru & Business Development Expert</h3>
                         <p>Shaun leads the marketing team at Vorp Energy and connects systems integrators with solutions architects.</p>
-                    </figcaption><a href="https://www.linkedin.com/in/shaunnolananderson/" target="_blank"></a>
+                    </figcaption><a href="#"></a>
                   </figure>
                 </div>
               </div>
